UI: fix achievement tooltip being cropped when there is only one achievement on screen

--- a/src/css/component/achievements/achievements.component.scss
+++ b/src/css/component/achievements/achievements.component.scss
@@ -9,6 +9,10 @@
 			flex-grow 0.4s ease-in-out;
 	}
 
+	with-loading {
+		flex-grow: 1;
+	}
+
 	.main {
 		achievements-list {
 			flex-grow: 1;
